/*
 * Copyright (c) 2020, Arm Limited and Contributors. All rights reserved.
 * SPDX-License-Identifier: BSD-3-Clause
 */
syntax = "proto3";

package ts_crypto;

message GenerateRandomIn {
  uint64 size = 1;
}

message GenerateRandomOut {
  bytes random_bytes = 1;
}
